fixing input field overflowe

--- a/src/components/SeachForm/SearchForm.css
+++ b/src/components/SeachForm/SearchForm.css
@@ -37,4 +37,9 @@
 .search-icon{
     display: none;
 }
+.search-form{
+    width: 100%;
+    max-width: 480px;
+}
+
 }
